<resources>
    <string name="app_name">android-mvvm-template</string>
    <string name="close">Close</string>
    <string name="try_again">Try Again</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <!-- Error message -->
    <string name="err_title">Oops!</string>
    <string name="err_network">Network error, unable to load data, please try again!</string>
    <string name="err_no_internet">Slow or no internet connection. Please check your internet settings</string>
    <string name="err_token_expired">Token has expired, please login again</string>
    <string name="err_invalid_credentials">Username or password is wrong, please try again</string>
    <string name="err_forbidden_access">You don\'t have access rights</string>
    <!-- TextField error response -->
    <string name="field_required">This field is required</string>
    <string name="email_not_valid">Please enter a valid email address</string>
    <string name="password_required_valid_format">Password must be at least 1 number, 1 lowercase letter, 1 uppercase letter, 1 symbol and minimal password length is 8</string>
    <string name="contact_number_not_valid">Please enter a valid contact number</string>
    <!-- Login page -->
    <string name="login_title">Login to use apps</string>
    <string name="login_caption">Welcome back! Login or signing up now.</string>
    <string name="email_address_required">Email Address*</string>
    <string name="password_required">Password*</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="login_using_fingerprint">Login using fingerprint</string>
    <string name="create_account">Create Account</string>
    <string name="login_fingerprint_title">Confirm using your fingerprint</string>
    <string name="finger_print_required">Please register your fingerprint in settings</string>
</resources>