<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".ui.components.login.LoginActivity">

    <data>
        <import type="com.apps.constants.Validation" />
        <variable
            name="viewModel"
            type="com.apps.ui.components.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/large">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/super_extra_large"
            android:contentDescription="@string/app_name"
            app:srcCompat="@mipmap/ic_launcher"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/super_extra_large"
            android:text="@string/login_title"
            android:textColor="@color/black"
            android:textSize="@dimen/text_title2"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/image"
            app:layout_constraintStart_toStartOf="@id/image"/>

        <TextView
            android:id="@+id/caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small"
            android:text="@string/login_caption"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extra_large"
            android:hint="@string/email_address_required"
            app:validation="@{ Validation.EMAIL }"
            app:layout_constraintTop_toBottomOf="@id/caption"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.username}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large"
            android:hint="@string/password_required"
            app:validation="@{ Validation.PASSWORD }"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@id/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/large"
            android:text="@string/forgot_password"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/login_fingerprint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large"
            android:contentDescription="@string/login_using_fingerprint"
            app:backgroundTint="?attr/colorPrimary"
            app:srcCompat="@drawable/ic_fingerprint"
            app:tint="?attr/colorOnPrimary"
            app:layout_constraintTop_toTopOf="@id/login"
            app:layout_constraintBottom_toBottomOf="@id/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/login"/>

        <Button
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:enabled="@{viewModel.enableLogin}"
            android:onClick="@{() -> viewModel.login()}"
            android:text="@string/sign_in"
            android:textSize="@dimen/text_headline"
            app:cornerRadius="@dimen/extra_large"
            app:layout_constraintBottom_toTopOf="@id/create"
            app:layout_constraintEnd_toStartOf="@id/login_fingerprint"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/create"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="?actionBarSize"
            android:text="@string/create_account"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/text_headline"
            app:backgroundTint="?attr/colorOnPrimary"
            app:cornerRadius="@dimen/extra_large"
            app:rippleColor="@color/lighter_gray"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>